--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   <div class="container">
     <div class="header">
       <div class="logo">
-        <img src="לב אחד.png" alt="לב אחד - Community Crisis Aid">
+        <img src="logo.png" alt="לב אחד - Community Crisis Aid">
       </div>
       <h1>לב אחד</h1>
       <p>מצא את קבוצת הוואטסאפ של העיר שלך</p>
