Update index.html fixed links

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   </div>
 
   <script>
-    const const cityLinks = {
+    const cityLinks = {
   "אילת": "https://chat.whatsapp.com/invite/DW1Ja40tqMz7pWuh9VrdnA",
   "גיתית": "https://chat.whatsapp.com/invite/JZr2v6bt9AT9HT3ZLQ5XB4",
   "מעלה אפרים": "https://chat.whatsapp.com/INRmecDGJcQLeHitL5BbhQ",
