Update index.html fixed בסמ

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
   </div>
 
   <script>
-    const cityLinks = {
+  const cityLinks = {
   "אילת": "https://chat.whatsapp.com/invite/DW1Ja40tqMz7pWuh9VrdnA",
   "גיתית": "https://chat.whatsapp.com/invite/JZr2v6bt9AT9HT3ZLQ5XB4",
   "מעלה אפרים": "https://chat.whatsapp.com/INRmecDGJcQLeHitL5BbhQ",
@@ -335,7 +335,7 @@
   "חורה": "https://chat.whatsapp.com/R3s3T2S1R0Q7T6S5R4Q3",
   "תל שבע": "https://chat.whatsapp.com/S4t4U3T2S1R7T6S5R4Q3",
   "שגב שלום": "https://chat.whatsapp.com/T5u5V4U3T2S7T6S5R4Q3",
-  "בסמ\"א": "https://chat.whatsapp.com/U6v6W5V4U3T7T6S5R4Q3",
+  "בסמ\\"א": "https://chat.whatsapp.com/U6v6W5V4U3T7T6S5R4Q3",
   "בועיינה-נוג'ידאת": "https://chat.whatsapp.com/V7w7X6W5V4U7T6S5R4Q3",
   "דבורייה": "https://chat.whatsapp.com/W8x8Y7X6W5V7T6S5R4Q3",
   "כפר כמא": "https://chat.whatsapp.com/X9y9Z8Y7X6W7T6S5R4Q3",
